feat: Add Datadog instrumentation with security best practices
- Add Datadog Agent configuration template (API key hidden)
- Add OpenTelemetry Collector configuration for Datadog export
- Add automated installation script
- Add comprehensive documentation for Datadog setup
- Configure Universal Service Monitoring, Network Monitoring, and Profiling
- Add .gitignore rules to protect sensitive API keys
- Update README with Datadog instrumentation section

Security: API keys are templated and must be configured locally

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@ test/tracetesting/tracetesting-vars.yaml
 *.apk
 
 !src/currency/build
+# Datadog API keys
+helm-values/datadog-values.yaml
+*.env.local
+.env.datadog
+
+# IDE
+.vscode/
+.idea/
